--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   <div class="app-content">
     <div class="app-sidebar">
-      <a href="https:straight-code.xyz/services/index.html" class="app-sidebar-link active">
+      <a href="https://straight-code.xyz/services/index.html" class="app-sidebar-link">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
           <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
           <polyline points="9 22 9 12 15 12 15 22" /></svg>
@@ -83,8 +83,10 @@
 				<a href="#" class="support-button">Contact</a>
 			</div>
 		</section>
+    <br/>
 
 		<section class="content">
+      <br/>
 			<div class="content-item">
 				<h3 class="content-title">
 					A item is missing from my invoice
@@ -92,7 +94,7 @@
 				</h3>
 				<p class="content-description">If you have notice a issue with an invoice you have recieve you can contact : help.straight.code@gmail.com. </p>
 			</div>
-
+<br/>
 			<div class="content-item">
 				<h3 class="content-title">
 					How do i recieve a refund?
@@ -100,7 +102,15 @@
 				</h3>
 				<p class="content-description">you can email : contact.straight.code@gmail.com with you refund request.</p>
 			</div>
-
+      <br/>
+      <div class="content-item">
+				<h3 class="content-title">
+					How long with my item take to arrive from the straight-code shop
+					<span href="./assets/shop.html" style="text-decoration: none;" class="badge badge-secondary">Shop</span>
+				</h3>
+				<p class="content-description">If you have notice a issue with an invoice you have recieve you can contact : help.straight.code@gmail.com. </p>
+			</div>
+      <br/>
 			<div class="content-item">
 				<h3 class="content-title">
 						How do i cancel a subscription?
@@ -108,6 +118,33 @@
 					</h3>
 				<p class="content-description">you can email: contact.straight.code@gmail.com with your cancellation request.</p>
 			</div>
+      <br/>
+      <div class="content-item">
+				<h3 class="content-title">
+						How do i cancel a subscription for one of my courses?
+						<span class="badge badge-secondary">Courses</span>
+					</h3>
+				<p class="content-description">you can email: courses.straight.code@gmail.com with your cancellation request.</p>
+			</div>
+      <br/>
+      <div class="content-item">
+				<h3 class="content-title">
+						Where is the Priacy Policy located on the website? 
+						<span class="badge badge-primary">Privacy</span>
+					</h3>
+				<p class="content-description">you can click <a href="">here</a>.</p>
+			</div>
+      <br/>
+      <div class="content-item">
+				<h3 class="content-title">
+						How do i cancel a subscription with a plan?
+						<span class="badge badge-secondary">Plans</span>
+					</h3>
+				<p class="content-description">you can email: plans.straight.code@gmail.com with your cancellation request.
+         
+        </p>
+			</div>
+      <br/>
 		</section>
 	</main>
   </div>
