--- a/main/billing.html
+++ b/main/billing.html
@@ -2,10 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>straight-code | Support</title>
+  <title> Support | Billing</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./main.css">
-<link rel="stylesheet" href="./support.css">
+<link rel="stylesheet" href="../main.css">
+<link rel="stylesheet" href="../support.css">
 
 <link href="https://github.com/straight-code.png" rel="shortcut icon" />
 </head>
@@ -53,7 +53,7 @@
     </div>
     <div class="projects-section">
       <div class="projects-section-header">
-        <p style="margin-top: -15px;">Support</p>
+        <p style="margin-top: -15px;">Support - Billing</p>
         <p class="time"></p>
       </div>
       <div class="project-boxes jsListView " >
@@ -67,16 +67,16 @@
 		<section class="menu">
 			<h1 class="menu-title">Populer topics</h1>
 			<nav class="menu-links">
-				<a href="./index.html" class="menu-link">All</a>
-				<a href="./main/shop.html" class="menu-link">Shop</a>
-				<a href="./main/courses.html" class="menu-link">Courses</a>
-				<a href="./main/plans.html" class="menu-link">Plans</a>
-				<a href="./main/invoices.html" class="menu-link">Invoices</a>
-				<a href="./main/billing.html" class="menu-link">Billing</a>
-				<a href="./main/privacy.html" class="menu-link">Privacy</a>
-				<a href="./main/refunds.html" class="menu-link">Refunds</a>
-				<a href="./main/terms-&-coniditions.html" class="menu-link">Terms & Coniditions</a>
-			</nav>
+				<a href="../index.html" class="menu-link">All</a>
+        <a href="./shop.html" class="menu-link">Shop</a>
+				<a href="./courses.html" class="menu-link">Courses</a>
+				<a href="./plans.html" class="menu-link">Plans</a>
+				<a href="./invoices.html" class="menu-link">Invoices</a>
+				<a href="./billing.html" class="menu-link">Billing</a>
+				<a href="./privacy.html" class="menu-link">Privacy</a>
+				<a href="./refunds.html" class="menu-link">Refunds</a>
+				<a href="./terms-&-coniditions.html" class="menu-link">Terms & Coniditions</a>
+            </nav>
 
 			<div class="support">
 				<h2 class="support-title">Contact support</h2>
@@ -89,62 +89,12 @@
 		<section class="content">
 			<div class="content-item">
 				<h3 class="content-title">
-					A item is missing from my invoice
-					<span href="./assets/invoices.html" style="text-decoration: none;" class="badge badge-secondary">Invoice</span>
-				</h3>
-				<p class="content-description">If you have notice a issue with an invoice you have recieve you can contact : help.straight.code@gmail.com. </p>
-			</div>
-<br/>
-			<div class="content-item">
-				<h3 class="content-title">
-					How do i recieve a refund?
-					<span href="./assets/refunds.html" style="text-decoration: none;" class="badge badge-primary">Refunds</span>
-				</h3>
-				<p class="content-description">you can email : contact.straight.code@gmail.com with you refund request.</p>
-			</div>
-      <br/>
-      <div class="content-item">
-				<h3 class="content-title">
-					How long with my item take to arrive from the straight-code shop
-					<span href="./assets/shop.html" style="text-decoration: none;" class="badge badge-secondary">Shop</span>
-				</h3>
-				<p class="content-description">If you have notice a issue with an invoice you have recieve you can contact : help.straight.code@gmail.com. </p>
-			</div>
-      <br/>
-			<div class="content-item">
-				<h3 class="content-title">
 						How do i cancel a subscription?
 						<span class="badge badge-primary">Billing</span>
 					</h3>
 				<p class="content-description">you can email: contact.straight.code@gmail.com with your cancellation request.</p>
 			</div>
-      <br/>
-      <div class="content-item">
-				<h3 class="content-title">
-						How do i cancel a subscription for one of my courses?
-						<span class="badge badge-secondary">Courses</span>
-					</h3>
-				<p class="content-description">you can email: courses.straight.code@gmail.com with your cancellation request.</p>
-			</div>
-      <br/>
-      <div class="content-item">
-				<h3 class="content-title">
-						Where is the Privacy Policy located on the website? 
-						<span class="badge badge-primary">Privacy</span>
-					</h3>
-				<p class="content-description">you can click <a href="">here</a>.</p>
-			</div>
-      <br/>
-      <div class="content-item">
-				<h3 class="content-title">
-						How do i cancel a subscription with a plan?
-						<span class="badge badge-secondary">Plans</span>
-					</h3>
-				<p class="content-description">you can email: plans.straight.code@gmail.com with your cancellation request.
-         
-        </p>
-			</div>
-      <br/>
+<br/>
 		</section>
 	</main>
   </div>
@@ -152,6 +102,6 @@
 </div>
 </div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="../script.js"></script>
 </body>
 </html>
